@@ -1,6 +1,9 @@
 2007-11-16 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
 	* src/Config/_GrampsConfigKeys.py: Add keys for the PedigreeView
 	* src/DataViews/_PedigreeView.py: Remember tree settings in config
+	* src/plugins/TestcaseGenerator.py: Remove date tests
+	* src/plugins/DateParserDisplayTest.py: New plugin split out from
+	TestcaseGenerator
 
 2007-11-13  Brian Matherly <brian@gramps-project.org>
 	* src/plugins/NarrativeWeb.py: Fix 0001369: Cannot translate (LivingProxy) 
